--- a/app/src/main/res/layout/fragment_database_manager.xml
+++ b/app/src/main/res/layout/fragment_database_manager.xml
@@ -7,7 +7,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:paddingLeft="@dimen/form_margin"
+        android:paddingRight="@dimen/form_margin"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/txbParentId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="ParentId"
+            android:text="0" />
+
+        <EditText
+            android:id="@+id/txbName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Name" />
+
+        <Button
+            android:id="@+id/btnInsertSection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Insert Section" />
+
+
+
+            <Button
+                android:id="@+id/btnCreateDatabase"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Create Database" />
+
+
 
         <TextView
             android:id="@+id/txvDisplay"
@@ -15,13 +52,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Ready to display" />
-
-        <Button
-            android:id="@+id/btnCreateDatabase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Create Database" />
 
     </LinearLayout>
 </FrameLayout>
