--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">10dp</dimen>
     <dimen name="nav_header_height">100dp</dimen>
+    <dimen name="form_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 </resources>
