--- a/app/src/main/res/layout/section_row.xml
+++ b/app/src/main/res/layout/section_row.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="4dp">
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    android:padding="4dp"
+    android:orientation="horizontal">
 
         <TextView
             android:text="Id"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tvId" android:layout_weight="1"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/tvId"
+            android:layout_weight="1"/>
 
         <TextView
             android:text="Name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tvName" android:layout_weight="1"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:id="@+id/tvName"
+            android:layout_weight="1"/>
+
 
 </LinearLayout>
